--- a/.github/workflows/mdbook.yaml
+++ b/.github/workflows/mdbook.yaml
@@ -34,7 +34,7 @@ jobs:
         name: Install mdbook
         env:
           CARGO_HOME: ./cargo
-        run: cargo install mdbook-admonish mdbook-variables mdbook
+        run: cargo install mdbook-admonish mdbook-variables mdbook mdbook-toc mdbook-pagetoc
 
   install-tfdocs:
     environment:
