mdbook-admonish v1.10.2, mdbook-variables v0.2.2
Signed-off-by: Ali Mukadam <ali.mukadam@oracle.com>

--- a/.github/workflows/mdbook.yaml
+++ b/.github/workflows/mdbook.yaml
@@ -34,7 +34,7 @@ jobs:
         name: Install mdbook
         env:
           CARGO_HOME: ./cargo
-        run: cargo install mdbook-admonish mdbook-variables mdbook mdbook-toc mdbook-pagetoc
+        run: cargo install mdbook@0.4.34 mdbook-admonish@1.10.2 mdbook-variables@0.2.2 mdbook-toc@0.14.1 mdbook-pagetoc@0.1.7
 
   install-tfdocs:
     environment:
