Update mdbook-admonish version to v1.10.2
fix for incompatible version of mdbook and admonish

Signed-off-by: Ali Mukadam <ali.mukadam@oracle.com>

--- a/.github/workflows/mdbook.yaml
+++ b/.github/workflows/mdbook.yaml
@@ -34,7 +34,7 @@ jobs:
         name: Install mdbook
         env:
           CARGO_HOME: ./cargo
-        run: cargo install mdbook-admonish mdbook-variables mdbook mdbook-toc mdbook-pagetoc
+        run: cargo install mdbook-admonish@v10.0.2 mdbook-variables mdbook mdbook-toc mdbook-pagetoc
 
   install-tfdocs:
     environment:
