--- a/.github/workflows/mdbook.yaml
+++ b/.github/workflows/mdbook.yaml
@@ -34,7 +34,7 @@ jobs:
         name: Install mdbook
         env:
           CARGO_HOME: ./cargo
-        run: cargo install mdbook-admonish@v10.0.0 mdbook-variables@v0.2.3 mdbook@0.4.32 mdbook-toc@v0.13.0 mdbook-pagetoc
+        run: cargo install mdbook-admonish mdbook-variables@v0.2.2 mdbook mdbook-toc mdbook-pagetoc
 
   install-tfdocs:
     environment:
