--- a/.github/workflows/mdbook.yaml
+++ b/.github/workflows/mdbook.yaml
@@ -1,9 +1,7 @@
 name: Publish Documentation
 on:
   push:
-    branches:
-      - "5.x"
-      - "5.x-*"
+    branches: ["5.x"]
   workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
