fix: Upload RMS directory artifacts
Signed-off-by: Devon Crouse <devon.crouse@oracle.com>

--- a/.github/workflows/rms.yaml
+++ b/.github/workflows/rms.yaml
@@ -1,8 +1,7 @@
 name: Publish Terraform OCI OKE RMS Stacks
 on:
   push:
-    branches:
-      - "5.x-tf12"
+    branches: ["5.x-tf12"]
   workflow_dispatch:
 
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
@@ -18,13 +17,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Create archive
-        working-directory: ./examples/rms
-        run: zip -r tfoke-rms-network-only.zip ./oke-network-only
       - uses: actions/upload-artifact@v3
         with:
-          name: tfoke-rms-network-only.zip
-          path: ./examples/rms/tfoke-rms-network-only.zip
+          name: tfoke-rms-network-only
+          path: ./examples/rms/oke-network-only/
           retention-days: 90
           if-no-files-found: error
 
@@ -34,13 +30,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Create archive
-        working-directory: ./examples/rms
-        run: zip -r tfoke-rms-cluster-only.zip ./oke-cluster-only
       - uses: actions/upload-artifact@v3
         with:
-          name: tfoke-rms-cluster-only.zip
-          path: ./examples/rms/tfoke-rms-cluster-only.zip
+          name: tfoke-rms-cluster-only
+          path: ./examples/rms/oke-cluster-only/
           retention-days: 90
           if-no-files-found: error
 
@@ -50,13 +43,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Create archive
-        working-directory: ./examples/rms
-        run: zip -r tfoke-rms-workers-only.zip ./oke-workers-only
       - uses: actions/upload-artifact@v3
         with:
-          name: tfoke-rms-workers-only.zip
-          path: ./examples/rms/tfoke-rms-workers-only.zip
+          name: tfoke-rms-workers-only
+          path: ./examples/rms/oke-workers-only/
           retention-days: 90
           if-no-files-found: error
 
