--- a/.github/workflows/mdbook.yaml
+++ b/.github/workflows/mdbook.yaml
@@ -32,7 +32,8 @@ jobs:
         name: Install mdbook
         env:
           CARGO_HOME: ./cargo
-        run: cargo install --locked --force mdbook@0.4.34 mdbook-admonish@1.10.2 mdbook-variables@0.2.2 mdbook-toc@0.14.1 mdbook-pagetoc@0.1.7
+        # run: cargo install --locked --force mdbook@0.4.34 mdbook-admonish@1.10.2 mdbook-variables@0.2.2 mdbook-toc@0.14.1 mdbook-pagetoc@0.1.7
+        run: cargo install --locked --force mdbook@0.4.34 mdbook-admonish@1.17.1 mdbook-variables@0.2.4 mdbook-toc@0.14.2 mdbook-pagetoc@0.2.0
 
   install-tfdocs:
     environment:
