--- a/.github/workflows/mdbook.yaml
+++ b/.github/workflows/mdbook.yaml
@@ -68,7 +68,14 @@ jobs:
         with:
           key: tfdocs
           path: ./tfdocs/terraform-docs
-
+      - name: Install mdbook-admonish
+        shell: bash
+        env:
+          CARGO_HOME: ./cargo
+        run: |
+          export PATH=`pwd`/cargo/bin:${PATH}
+          cd docs
+          mdbook-admonish install
       - name: Generate docs
         shell: bash
         env:
