fix: mdbook update 2
Signed-off-by: Ali Mukadam <ali.mukadam@oracle.com>

--- a/.github/workflows/mdbook.yaml
+++ b/.github/workflows/mdbook.yaml
@@ -32,8 +32,7 @@ jobs:
         name: Install mdbook
         env:
           CARGO_HOME: ./cargo
-        # run: cargo install --locked --force mdbook@0.4.34 mdbook-admonish@1.10.2 mdbook-variables@0.2.2 mdbook-toc@0.14.1 mdbook-pagetoc@0.1.7
-        run: cargo install --locked --force mdbook@0.4.34 mdbook-admonish@1.17.1 mdbook-variables@0.2.4 mdbook-toc@0.14.2 mdbook-pagetoc@0.2.0
+        run: cargo install --locked --force mdbook@0.4.40 mdbook-admonish@1.18.0 mdbook-variables@0.2.4 mdbook-toc@0.14.2 mdbook-pagetoc@0.2.0
 
   install-tfdocs:
     environment:
@@ -75,7 +74,7 @@ jobs:
         run: |
           export PATH=${PWD}/cargo/bin:${PATH}
           cd docs
-          mdbook-admonish install
+          mdbook-admonish install --css-dir src/css
       - name: Generate docs
         shell: bash
         env:
